# postio-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
postio/: __init__.py  _http.py  _models.py  client.py  exceptions.py
scripts/: codegen.py
tests/: conftest.py  test_address.py  test_connect.py  test_email.py  test_offline.py  test_phone.py
