[project]
name = "postio"
version = "0.1.1"
description = "Python SDK for the Postio API — UK address, email, and phone validation. PAF + Ordnance Survey backed. Sync + async, type-safe via Pydantic v2."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Postio", email = "admin@postio.co.uk" }]
keywords = [
  "postio",
  "uk",
  "address",
  "postcode",
  "validation",
  "address-validation",
  "postcode-lookup",
  "address-lookup",
  "paf",
  "royal-mail",
  "ordnance-survey",
  "email",
  "phone",
  "sdk",
  "django",
  "flask",
  "fastapi",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: Django",
  "Framework :: FastAPI",
  "Framework :: Flask",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
]

[project.urls]
Homepage      = "https://postio.co.uk"
Documentation = "https://postio.co.uk/docs"
Repository    = "https://github.com/postio-uk/postio-python"
Issues        = "https://github.com/postio-uk/postio-python/issues"
Changelog     = "https://github.com/postio-uk/postio-python/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["postio"]

[tool.hatch.build.targets.sdist]
include = ["postio", "README.md", "LICENSE", "CHANGELOG.md"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "python-dotenv>=1.0",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.10",
  "datamodel-code-generator[ruff]>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# SIM117: nested `with` reads cleaner in tests where pytest.raises is the
#         assertion. RUF022: __all__ is grouped semantically, not alphabetically.
ignore = ["E501", "SIM117", "RUF022"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
exclude = ["postio/_models.py$"]
